<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">Pol</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_thread">Thread</string>
    <string name="textView2">Large Text</string>
    <string name="pageTitle">Constituency</string>
    <string name="discussionTitle">Create Post</string>
    <string name="title_activity_landing_page">Landing Page</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_thread_create">ThreadCreate</string>
    <string name="button2">Submit</string>
    <string name="editText">Post Title</string>
    <string name="editText2">Post body</string>
</resources>
