<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sufiy_000.pol.ThreadCreate"
    android:id="@+id/">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <View
        style="@style/TitleBar"
        android:background="@color/title"
        android:id="@+id/TitleView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/view" />

    <View
        style="@style/TitleBar"
        android:background="@color/sub"
        android:id="@+id/view"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/editText"
        android:layout_below="@+id/view"
        android:layout_marginTop="15dp"
        android:width="200dp"
        android:text="@string/editText"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:width="350dp"
        android:text="@string/editText2"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pageTitle"
        android:id="@+id/textView6"
        android:textColor="@color/main"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/discussionTitle"
        android:id="@+id/textView5"
        android:textColor="@color/button_material_dark"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="65dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
